--- a/CIND820.ipynb
+++ b/CIND820.ipynb
@@ -6,7 +6,7 @@
       "name": "Copy of CIND820.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO/GuQK/soKXVCkxBg8ahyP",
+      "authorship_tag": "ABX9TyMLVvbRwwSVF7dH3Gy5gK3f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,10 +51,11 @@
         "%matplotlib inline\n",
         "import plotly.express as px\n",
         "from sklearn import linear_model\n",
+        "import statsmodels.api as sm\n",
         "\n",
         "\n"
       ],
-      "execution_count": 28,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -737,7 +738,7 @@
         "id": "v6N5_yJr9yzA",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 601
+          "height": 694
         },
         "outputId": "0ddab1d7-9634-49ac-f696-a646c3e0d320"
       },
@@ -1344,6 +1345,66 @@
             " -9.87455840e-05]\n",
             "Predicted Total CPI: \n",
             " [605.65198873]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LtSPt287lNgJ",
+        "outputId": "bd800cda-c1a2-4366-c4b5-1acf289c953c"
+      },
+      "source": [
+        "# with statsmodels\n",
+        "X = sm.add_constant(X) # adding a constant\n",
+        " \n",
+        "model = sm.OLS(Y, X).fit()\n",
+        "predictions = model.predict(X) \n",
+        " \n",
+        "print_model = model.summary()\n",
+        "print(print_model)"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:              Total_CPI   R-squared:                       0.991\n",
+            "Model:                            OLS   Adj. R-squared:                  0.991\n",
+            "Method:                 Least Squares   F-statistic:                 1.286e+04\n",
+            "Date:                Sat, 30 Oct 2021   Prob (F-statistic):               0.00\n",
+            "Time:                        23:42:31   Log-Likelihood:                -2428.2\n",
+            "No. Observations:                 597   AIC:                             4868.\n",
+            "Df Residuals:                     591   BIC:                             4895.\n",
+            "Df Model:                           5                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "==============================================================================\n",
+            "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "------------------------------------------------------------------------------\n",
+            "const         40.6080      3.275     12.400      0.000      34.176      47.040\n",
+            "CPI_Ener       0.2276      0.002     94.262      0.000       0.223       0.232\n",
+            "CPI_Agri       0.1933      0.026      7.544      0.000       0.143       0.244\n",
+            "CPI_Metals     0.1479      0.009     16.240      0.000       0.130       0.166\n",
+            "CPI_Forst      0.1386      0.010     13.836      0.000       0.119       0.158\n",
+            "CPI_Fish   -9.875e-05      0.003     -0.034      0.973      -0.006       0.006\n",
+            "==============================================================================\n",
+            "Omnibus:                       58.525   Durbin-Watson:                   0.034\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               44.820\n",
+            "Skew:                          -0.573   Prob(JB):                     1.85e-10\n",
+            "Kurtosis:                       2.300   Cond. No.                     7.20e+03\n",
+            "==============================================================================\n",
+            "\n",
+            "Warnings:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+            "[2] The condition number is large, 7.2e+03. This might indicate that there are\n",
+            "strong multicollinearity or other numerical problems.\n"
           ]
         }
       ]
