--- a/CIND820.ipynb
+++ b/CIND820.ipynb
@@ -6,7 +6,7 @@
       "name": "Copy of CIND820.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyORegKPhNJiqP+Ctw5bz6fj",
+      "authorship_tag": "ABX9TyP/fN6t5mfZ1h1m7mDgKE+W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1900,15 +1900,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iFFkxs1Ne-31",
-        "outputId": "0f566061-b0e7-4e8d-b5db-0ebb85690828"
+        "outputId": "4940fb1b-1df1-4c29-eec5-aa9d15d66c38"
       },
       "source": [
+        "#Used the KNN algorithm to predict total CPI using the attributes\n",
         "knn = KNeighborsClassifier()\n",
         "knn.fit(x_train,y_train)\n",
         "pred_knn=knn.predict(x_test)\n",
         "print(classification_report(y_test, pred_knn))"
       ],
-      "execution_count": 131,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
@@ -2145,7 +2146,7 @@
         "outputId": "b415506d-bc9c-4923-fa1b-b19853daff78"
       },
       "source": [
-        "s_c = StandardScaler()\n",
+        "ts_c = StandardScaler()\n",
         "x_train = s_c.fit_transform(x_train) \n",
         "x_test=s_c.fit_transform(x_test)\n",
         "KNN = KNeighborsClassifier (n_neighbors=7,p=1)\n",
@@ -2447,6 +2448,7 @@
         "outputId": "6e29474d-31fb-4c4e-8278-d2431fc6742a"
       },
       "source": [
+        "#Displaying the confusion matrix to evaluate the model performance\n",
         "y_pred = KNN.predict(x_test)\n",
         "cm = confusion_matrix(y_test,y_pred)\n",
         "cm_data = pd.DataFrame(cm, \n",
@@ -2487,6 +2489,7 @@
         "outputId": "d20912e0-3282-4918-d5d3-538151c306ab"
       },
       "source": [
+        "#Evaluating the model performance by computing Accuracy, Sensitivity and Specificity\n",
         "print(classification_report(y_test, y_pred))"
       ],
       "execution_count": 132,
