--- a/CIND820.ipynb
+++ b/CIND820.ipynb
@@ -6,7 +6,7 @@
       "name": "Copy of CIND820.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP+jhD3L87TUNK17f4pbDPB",
+      "authorship_tag": "ABX9TyPvJGKuGu5XSODHbftttI3/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2224,13 +2224,13 @@
         "outputId": "671af153-455d-453c-ba6c-b5105d068132"
       },
       "source": [
-        "#preprocessing test dataset\n",
+        "#preprocessing test dataset and predicting  the test set\n",
         "\n",
         "x_test= pd.get_dummies(test)\n",
         "test_scaled = scaler.fit_transform(test)\n",
         "x_test = pd.DataFrame(test_scaled)\n",
         "\n",
-        "#predicting on the test set and creating submission file\n",
+        "\n",
         "predict = model.predict(test)\n",
         "print(predict)\n"
       ],
